chore: fix word-spacing and font fallback

--- a/src/assets/oml.css
+++ b/src/assets/oml.css
@@ -9,9 +9,13 @@
 pre,
 pre *,
 code {
+  word-spacing: normal;
+  font-display: fallback;
   font-family: OperatorMonoLig, "Consolas", "Monaco", monospace !important;
 }
 body {
+  word-spacing: normal;
+  font-display: fallback;
   font-family: ProbaPro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
 }
